[gd_scene load_steps=13 format=3 uid="uid://b8k7x9y2z3m4n"]

[ext_resource type="Script" path="res://scripts/MultiplayerGameScene.gd" id="1_game"]
[ext_resource type="Material" path="res://materials/ground.tres" id="2_ground"]
[ext_resource type="PackedScene" uid="uid://b8up81cisp0n7" path="res://scenes/corner.tscn" id="3_corner"]
[ext_resource type="PackedScene" uid="uid://cvbqlu7g5euut" path="res://scenes/ball.tscn" id="4_ball"]
[ext_resource type="PackedScene" uid="uid://ce4mff04luqsx" path="res://scenes/ball_spawner.tscn" id="5_spawner"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1"]
friction = 0.0
bounce = 1.0
absorbent = true

[sub_resource type="BoxMesh" id="BoxMesh_1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(50, 1, 50)

[node name="MultiplayerGameScene" type="Node3D"]
script = ExtResource("1_game")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 30.472416, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Ground" type="StaticBody3D" parent="." groups=["ground"]]
physics_material_override = SubResource("PhysicsMaterial_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0)
material_override = ExtResource("2_ground")
mesh = SubResource("BoxMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_1")

[node name="Corners" type="Node3D" parent="."]

[node name="Corner1" parent="Corners" instance=ExtResource("3_corner")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -20)

[node name="Corner2" parent="Corners" instance=ExtResource("3_corner")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -20)

[node name="Corner3" parent="Corners" instance=ExtResource("3_corner")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 20)

[node name="Corner4" parent="Corners" instance=ExtResource("3_corner")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 20)

[node name="Players" type="Node3D" parent="."]

[node name="BallSpawner" parent="." instance=ExtResource("5_spawner")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopPanel" type="Panel" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
color = Color(0.1, 0.1, 0.2, 0.8)

[node name="GameTitle" type="Label" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.0
offset_right = 150.0
offset_bottom = 15.0
text = "Multiplayer Crash Bash"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = -10.0
offset_bottom = 20.0
text = "Back to Lobby"

[node name="PlayerInfo" type="Label" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -10.0
text = "Players: 0"
horizontal_alignment = 1
vertical_alignment = 1
